--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/passwordStyle.css
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/passwordStyle.css
@@ -3,10 +3,8 @@
 body {
 	margin: 0;
 	height: 100vh;
-	background-image: url("FondoFruver.jpeg");
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+	background-color:white;
+	
 }
 
 #box-formulario {
