--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/style.css
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/style.css
@@ -4,10 +4,7 @@
 body {
 	margin: 0;
 	height: 100vh;
-	background-image: url("FondoFruver.jpeg");
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+	background-color: white;
 }
 
 /* Contenedor del formulario */
