--- a/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/userStyle.css
+++ b/prog2s3_bonzaDiego_cuervoJuan_gonzalezJuan_morenoChristian_almacenesExito/src/main/webapp/userStyle.css
@@ -1,12 +1,9 @@
 @charset "UTF-8";
 
 body {
-	margin: 0;
+		margin: 0;
 	height: 100vh;
-	background-image: url("FondoFruver.jpeg");
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+	background-color:white;
 }
 
 #box-formulario {
